[project]
name = "weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.15.0",
]

[tool.setuptools]
py-modules = ["weather"]

[tool.uv]
package = true

[project.scripts]
weather = "weather:main"
